// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DayView/> prop: selected should render correctly 1`] = `
<DayView
  selected={
    Array [
      "2018-11-30T15:00:00.000Z",
      "2018-12-11T15:00:00.000Z",
      "2018-12-14T15:00:00.000Z",
      "2018-12-21T15:00:00.000Z",
    ]
  }
>
  <DayView
    current={"2018-12-01T00:00:00.000Z"}
    locale="en-ca"
    selected={
      Array [
        "2018-11-30T15:00:00.000Z",
        "2018-12-11T15:00:00.000Z",
        "2018-12-14T15:00:00.000Z",
        "2018-12-21T15:00:00.000Z",
      ]
    }
  >
    <TableMatrixView
      cell={[Function]}
      headers={
        Array [
          "Sun",
          "Mon",
          "Tue",
          "Wed",
          "Thu",
          "Fri",
          "Sat",
        ]
      }
      matrix={
        Array [
          Array [
            " ",
            " ",
            " ",
            " ",
            " ",
            " ",
            "1",
          ],
          Array [
            "2",
            "3",
            "4",
            "5",
            "6",
            "7",
            "8",
          ],
          Array [
            "9",
            "10",
            "11",
            "12",
            "13",
            "14",
            "15",
          ],
          Array [
            "16",
            "17",
            "18",
            "19",
            "20",
            "21",
            "22",
          ],
          Array [
            "23",
            "24",
            "25",
            "26",
            "27",
            "28",
            "29",
          ],
          Array [
            "30",
            "31",
            " ",
            " ",
            " ",
            " ",
            " ",
          ],
        ]
      }
    >
      <table
        className="calendar__body--table"
      >
        <thead>
          <tr>
            <th
              key="0"
            >
              Sun
            </th>
            <th
              key="1"
            >
              Mon
            </th>
            <th
              key="2"
            >
              Tue
            </th>
            <th
              key="3"
            >
              Wed
            </th>
            <th
              key="4"
            >
              Thu
            </th>
            <th
              key="5"
            >
              Fri
            </th>
            <th
              key="6"
            >
              Sat
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            key="0"
          >
            <Cell
              className=""
              key="0"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="1"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="2"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="3"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="4"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="5"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6 calendar__day--selected"
              key="6"
              subText=""
              text="1"
            >
              <td
                className="calendar__day calendar__day--6 calendar__day--selected"
                onClick={[Function]}
              >
                <div>
                  1
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="1"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="1"
              subText=""
              text="2"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  2
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="2"
              subText=""
              text="3"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  3
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="3"
              subText=""
              text="4"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  4
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="4"
              subText=""
              text="5"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  5
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="5"
              subText=""
              text="6"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  6
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="6"
              subText=""
              text="7"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  7
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="7"
              subText=""
              text="8"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  8
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="2"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="2"
              subText=""
              text="9"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  9
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="3"
              subText=""
              text="10"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  10
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="4"
              subText=""
              text="11"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  11
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3 calendar__day--selected"
              key="5"
              subText=""
              text="12"
            >
              <td
                className="calendar__day calendar__day--3 calendar__day--selected"
                onClick={[Function]}
              >
                <div>
                  12
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="6"
              subText=""
              text="13"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  13
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="7"
              subText=""
              text="14"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  14
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6 calendar__day--selected"
              key="8"
              subText=""
              text="15"
            >
              <td
                className="calendar__day calendar__day--6 calendar__day--selected"
                onClick={[Function]}
              >
                <div>
                  15
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="3"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="3"
              subText=""
              text="16"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  16
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="4"
              subText=""
              text="17"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  17
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="5"
              subText=""
              text="18"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  18
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="6"
              subText=""
              text="19"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  19
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="7"
              subText=""
              text="20"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  20
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="8"
              subText=""
              text="21"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  21
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6 calendar__day--selected"
              key="9"
              subText=""
              text="22"
            >
              <td
                className="calendar__day calendar__day--6 calendar__day--selected"
                onClick={[Function]}
              >
                <div>
                  22
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="4"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="4"
              subText=""
              text="23"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  23
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="5"
              subText=""
              text="24"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  24
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="6"
              subText=""
              text="25"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  25
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="7"
              subText=""
              text="26"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  26
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="8"
              subText=""
              text="27"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  27
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="9"
              subText=""
              text="28"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  28
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="10"
              subText=""
              text="29"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  29
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="5"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="5"
              subText=""
              text="30"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  30
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="6"
              subText=""
              text="31"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  31
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="7"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="8"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="9"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="10"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="11"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
          </tr>
        </tbody>
      </table>
    </TableMatrixView>
  </DayView>
</DayView>
`;

exports[`<DayView/> prop: startDay, endDay should render correctly 1`] = `
<DayView
  endDay={"2018-12-10T15:00:00.000Z"}
  startDay={"2018-12-04T15:00:00.000Z"}
>
  <DayView
    current={"2018-12-01T00:00:00.000Z"}
    endDay={"2018-12-10T15:00:00.000Z"}
    locale="en-ca"
    startDay={"2018-12-04T15:00:00.000Z"}
  >
    <TableMatrixView
      cell={[Function]}
      headers={
        Array [
          "Sun",
          "Mon",
          "Tue",
          "Wed",
          "Thu",
          "Fri",
          "Sat",
        ]
      }
      matrix={
        Array [
          Array [
            " ",
            " ",
            " ",
            " ",
            " ",
            " ",
            "1",
          ],
          Array [
            "2",
            "3",
            "4",
            "5",
            "6",
            "7",
            "8",
          ],
          Array [
            "9",
            "10",
            "11",
            "12",
            "13",
            "14",
            "15",
          ],
          Array [
            "16",
            "17",
            "18",
            "19",
            "20",
            "21",
            "22",
          ],
          Array [
            "23",
            "24",
            "25",
            "26",
            "27",
            "28",
            "29",
          ],
          Array [
            "30",
            "31",
            " ",
            " ",
            " ",
            " ",
            " ",
          ],
        ]
      }
    >
      <table
        className="calendar__body--table"
      >
        <thead>
          <tr>
            <th
              key="0"
            >
              Sun
            </th>
            <th
              key="1"
            >
              Mon
            </th>
            <th
              key="2"
            >
              Tue
            </th>
            <th
              key="3"
            >
              Wed
            </th>
            <th
              key="4"
            >
              Thu
            </th>
            <th
              key="5"
            >
              Fri
            </th>
            <th
              key="6"
            >
              Sat
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            key="0"
          >
            <Cell
              className=""
              key="0"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="1"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="2"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="3"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="4"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="5"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="6"
              subText=""
              text="1"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  1
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="1"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="1"
              subText=""
              text="2"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  2
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="2"
              subText=""
              text="3"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  3
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="3"
              subText=""
              text="4"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  4
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3 calendar__day--start"
              key="4"
              subText=""
              text="5"
            >
              <td
                className="calendar__day calendar__day--3 calendar__day--start"
                onClick={[Function]}
              >
                <div>
                  5
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4 calendar__day--range"
              key="5"
              subText=""
              text="6"
            >
              <td
                className="calendar__day calendar__day--4 calendar__day--range"
                onClick={[Function]}
              >
                <div>
                  6
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5 calendar__day--range"
              key="6"
              subText=""
              text="7"
            >
              <td
                className="calendar__day calendar__day--5 calendar__day--range"
                onClick={[Function]}
              >
                <div>
                  7
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6 calendar__day--range"
              key="7"
              subText=""
              text="8"
            >
              <td
                className="calendar__day calendar__day--6 calendar__day--range"
                onClick={[Function]}
              >
                <div>
                  8
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="2"
          >
            <Cell
              className="calendar__day calendar__day--0 calendar__day--range"
              key="2"
              subText=""
              text="9"
            >
              <td
                className="calendar__day calendar__day--0 calendar__day--range"
                onClick={[Function]}
              >
                <div>
                  9
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1 calendar__day--range"
              key="3"
              subText=""
              text="10"
            >
              <td
                className="calendar__day calendar__day--1 calendar__day--range"
                onClick={[Function]}
              >
                <div>
                  10
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2 calendar__day--end"
              key="4"
              subText=""
              text="11"
            >
              <td
                className="calendar__day calendar__day--2 calendar__day--end"
                onClick={[Function]}
              >
                <div>
                  11
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="5"
              subText=""
              text="12"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  12
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="6"
              subText=""
              text="13"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  13
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="7"
              subText=""
              text="14"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  14
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="8"
              subText=""
              text="15"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  15
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="3"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="3"
              subText=""
              text="16"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  16
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="4"
              subText=""
              text="17"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  17
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="5"
              subText=""
              text="18"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  18
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="6"
              subText=""
              text="19"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  19
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="7"
              subText=""
              text="20"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  20
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="8"
              subText=""
              text="21"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  21
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="9"
              subText=""
              text="22"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  22
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="4"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="4"
              subText=""
              text="23"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  23
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="5"
              subText=""
              text="24"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  24
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="6"
              subText=""
              text="25"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  25
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="7"
              subText=""
              text="26"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  26
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="8"
              subText=""
              text="27"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  27
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="9"
              subText=""
              text="28"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  28
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="10"
              subText=""
              text="29"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  29
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="5"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="5"
              subText=""
              text="30"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  30
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="6"
              subText=""
              text="31"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  31
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="7"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="8"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="9"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="10"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="11"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
          </tr>
        </tbody>
      </table>
    </TableMatrixView>
  </DayView>
</DayView>
`;

exports[`<DayView/> prop:customClass, customText should render correctly 1`] = `
<DayView
  customDayClass={[Function]}
  customDayText={[Function]}
>
  <DayView
    current={"2018-12-01T00:00:00.000Z"}
    customDayClass={[Function]}
    customDayText={[Function]}
    locale="en-ca"
  >
    <TableMatrixView
      cell={[Function]}
      headers={
        Array [
          "Sun",
          "Mon",
          "Tue",
          "Wed",
          "Thu",
          "Fri",
          "Sat",
        ]
      }
      matrix={
        Array [
          Array [
            " ",
            " ",
            " ",
            " ",
            " ",
            " ",
            "1",
          ],
          Array [
            "2",
            "3",
            "4",
            "5",
            "6",
            "7",
            "8",
          ],
          Array [
            "9",
            "10",
            "11",
            "12",
            "13",
            "14",
            "15",
          ],
          Array [
            "16",
            "17",
            "18",
            "19",
            "20",
            "21",
            "22",
          ],
          Array [
            "23",
            "24",
            "25",
            "26",
            "27",
            "28",
            "29",
          ],
          Array [
            "30",
            "31",
            " ",
            " ",
            " ",
            " ",
            " ",
          ],
        ]
      }
    >
      <table
        className="calendar__body--table"
      >
        <thead>
          <tr>
            <th
              key="0"
            >
              Sun
            </th>
            <th
              key="1"
            >
              Mon
            </th>
            <th
              key="2"
            >
              Tue
            </th>
            <th
              key="3"
            >
              Wed
            </th>
            <th
              key="4"
            >
              Thu
            </th>
            <th
              key="5"
            >
              Fri
            </th>
            <th
              key="6"
            >
              Sat
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            key="0"
          >
            <Cell
              className=""
              key="0"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="1"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="2"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="3"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="4"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="5"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="6"
              text="1"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  1
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="1"
          >
            <Cell
              className="calendar__day calendar__day--0 custom-day day-test1 day-test2"
              key="1"
              subText="신정"
              text="2"
            >
              <td
                className="calendar__day calendar__day--0 custom-day day-test1 day-test2"
                onClick={[Function]}
              >
                <div>
                  2
                </div>
                <span
                  className="sub__text"
                >
                  신정
                </span>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="2"
              text="3"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  3
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="3"
              text="4"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  4
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="4"
              text="5"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  5
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="5"
              text="6"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  6
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="6"
              text="7"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  7
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="7"
              text="8"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  8
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="2"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="2"
              text="9"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  9
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="3"
              text="10"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  10
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2 custom-day"
              key="4"
              subText="공휴일"
              text="11"
            >
              <td
                className="calendar__day calendar__day--2 custom-day"
                onClick={[Function]}
              >
                <div>
                  11
                </div>
                <span
                  className="sub__text"
                >
                  공휴일
                </span>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="5"
              text="12"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  12
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="6"
              text="13"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  13
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="7"
              text="14"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  14
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="8"
              text="15"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  15
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="3"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="3"
              text="16"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  16
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="4"
              text="17"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  17
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="5"
              text="18"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  18
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="6"
              text="19"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  19
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="7"
              text="20"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  20
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="8"
              text="21"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  21
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="9"
              text="22"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  22
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="4"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="4"
              text="23"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  23
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="5"
              text="24"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  24
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--2"
              key="6"
              text="25"
            >
              <td
                className="calendar__day calendar__day--2"
                onClick={[Function]}
              >
                <div>
                  25
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--3"
              key="7"
              text="26"
            >
              <td
                className="calendar__day calendar__day--3"
                onClick={[Function]}
              >
                <div>
                  26
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--4"
              key="8"
              text="27"
            >
              <td
                className="calendar__day calendar__day--4"
                onClick={[Function]}
              >
                <div>
                  27
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--5"
              key="9"
              text="28"
            >
              <td
                className="calendar__day calendar__day--5"
                onClick={[Function]}
              >
                <div>
                  28
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--6"
              key="10"
              text="29"
            >
              <td
                className="calendar__day calendar__day--6"
                onClick={[Function]}
              >
                <div>
                  29
                </div>
              </td>
            </Cell>
          </tr>
          <tr
            key="5"
          >
            <Cell
              className="calendar__day calendar__day--0"
              key="5"
              text="30"
            >
              <td
                className="calendar__day calendar__day--0"
                onClick={[Function]}
              >
                <div>
                  30
                </div>
              </td>
            </Cell>
            <Cell
              className="calendar__day calendar__day--1"
              key="6"
              text="31"
            >
              <td
                className="calendar__day calendar__day--1"
                onClick={[Function]}
              >
                <div>
                  31
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="7"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="8"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="9"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="10"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
            <Cell
              className=""
              key="11"
              subText=""
              text=" "
            >
              <td
                className=""
                onClick={[Function]}
              >
                <div>
                   
                </div>
              </td>
            </Cell>
          </tr>
        </tbody>
      </table>
    </TableMatrixView>
  </DayView>
</DayView>
`;
